minio/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    name: minio
    app: minio
