minio/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service-nodeport
  namespace: minio
  labels:
    app: minio
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: minio-api
    nodePort: 30090  # Node port for MinIO API (30000-32767 range)
  - port: 9001
    targetPort: 9001
    protocol: TCP
    name: minio-console
    nodePort: 30091  # Node port for MinIO Console (30000-32767 range)
  selector:
    app: minio
