minio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
  labels:
    app: minio
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: minio-api
  - port: 9001
    targetPort: 9001
    protocol: TCP
    name: minio-console
  selector:
    app: minio
